--- a/latex/nvidia_figures.tex
+++ b/latex/nvidia_figures.tex
@@ -1,6 +1,6 @@
 \chapter{Figures from the NVidia Programming Guide}
 
-Figures~\ref{fig:gpu-devotes-more-transistors-to-data-processing}, \ref{fig:floating-point-operations-per-second}, \ref{fig:memory-bandwidth} are provided by the NVidia CUDA Programming Guide \cite{CudaGuide2013}
+Figures~\ref{fig:gpu-devotes-more-transistors-to-data-processing}, \ref{fig:floating-point-operations-per-second}, \ref{fig:memory-bandwidth} are provided by the NVidia CUDA Programming Guide \cite{CudaGuide2013}. \authnote{They will be integrated into the GPU chapter}
 
 \begin{figure}
 \centering
