--- a/latex/karen.tex
+++ b/latex/karen.tex
@@ -56,17 +56,20 @@
 \include{explicit_pde_solutions}
 \include{implicit_pde_solutions}
 \include{performance_analysis} 
-%\include{publications}
+\include{publications}
 
 \include{conclusions}
 
-
 \appendix
 \include{rbffd_avoid_pole_singularities}
-%\include{rbffd_weights_on_sphere}
 \include{nvidia_figures}
 
-\include{outside_content}
+\input{grid_generation}
+\input{related_work}
+\input{rbffd_weights_on_sphere}
+\input{performance_content/scaling/cut_from_distributed_solver}
+\input{performance_content/optimizations}
+\input{performance_content/hardware}
 
 % The BibTeX bibliography/references section.  View the file
 % 'myrefs.bib' to get a feel for what these entries may look like.
@@ -84,4 +87,3 @@
 %\input{biography.tex}
 
 \end{document}
- 
