More content. meeting with slice

--- a/latex/distributed_solver.tex
+++ b/latex/distributed_solver.tex
@@ -13,7 +13,7 @@
 \fi
 
 
-\chapter{Distributed RBF-FD}
+\chapter{Distributed RBF-FD (incomplete)}
 \label{chap:distributed_rbffd}
 
 
@@ -395,7 +395,7 @@ We consider a simple idealized problem where derivatives are computed over a reg
 \end{figure}
 
 
-\chapter{Distributed GPU SpMV}
+\chapter{Distributed GPU SpMV (incomplete)}
 \label{chap:multigpu_rbffd}
 
 Distributing SpMV across multiple GPUs poses a new problem: as previous mentioned, the data sent and received via MPI collectives must be copied from device to host and vice-versa. To amortize this cost we introduce a novel overlapping algorithm to hide the cost of communication behind the cost of a concurrent SpMV on the GPU. 
