--- a/latex/gpu_solver.tex
+++ b/latex/gpu_solver.tex
@@ -421,6 +421,10 @@ Other formats exist such as the Hybrid ELL plus CSR (HYB) format \cite{Bell2009}
 \label{fig:spmv_vcl_gflops}
 \end{figure}
 
+GFLOPs calculated as: 
+\begin{align}
+GFLOP/s = ^{N * n * 2} /_{t_ms} * 10^{-9}. 
+\end{align}
 
 
 
