--- a/latex/gpu_solver.tex
+++ b/latex/gpu_solver.tex
@@ -14,16 +14,24 @@
 \chapter{GPU SpMV (incomplete)}
 \label{chap:gpu_rbffd}
 
-General Purpose GPU (GPGPU) computing is one of today's hottest trends in scientific computing. As problem sizes grow larger, it behooves us to work on parallel architectures, be it across multiple CPUs or one or more GPUs, and with over 1 TFLOP/s peak throughput possible in double precision on a single GPU \cite{KeplerFactSheet}, a strong argument is made for the latter. 
+General Purpose GPU (GPGPU) computing is one of today's hottest trends in scientific computing. As problem sizes grow larger, it behooves us to work on parallel architectures, be it across multiple CPUs or one or more GPUs. With over 1 TFLOP/s peak possible throughput in double precision on a single GPU \cite{KeplerFactSheet}, a compelling argument is made for the latter. 
 
-GPUs originated as dedicated hardware for video games and computer graphics (e.g., for rasterization). Thanks to the highly profitable and always demanding game industry, the static rendering pipeline of yore, was molded into a fully programmable and dynamic execution platform with a SIMD-like programming model. 
+In the last decade, CPU designers have been forced to transition to multi- and many-core chips in order to keep up with demand for continued growth in computational performance. 
+%TODO: Moore's law states that 
+Power constraints make further frequency scaling on CPUs almost impossible, which leaves increased core counts as the only viable solution for designers to continue satisfying Moore's Law \cite{Owens2007}. 
+
+GPUs originated as dedicated hardware for video games and computer graphics (e.g., for rasterization). 
+Due to the inherent task parallelism in computer graphics, early GPU designers adopted a many-core strategy for hardware, which persists today. Since computer graphics traditionally involved simple operations, the majority of transistors on a GPU are dedicated to computation in vector pipelines with limited control for logic. In contrast to this, CPUs have always focused on fast serial and scalar operations. Thus, CPUs allocate a smaller number to computation in order to satisfy the needs for advanced logic tasks like branching, caching, etc \cite{Owens2007,CudaGuide2013}. Figure~\ref{fig:gpu-devotes-more-transistors-to-data-processing} (from \cite{CudaGuide2013}) gives a high level perspective of CPU versus GPU architecture. A GPU has a high density of Arithmetic Logic Units (ALUs) with simple simple control and caching on shared DRAM memory. 
+
+%TODO: verify ALU 
+
+Thanks to the highly profitable and always demanding game industry, the static rendering pipeline of yore, was molded into a fully programmable and dynamic execution platform with a SIMD-like platform. Prior to 2006, the GPU had already evolved away from fixed-function pipelines and on to limited programmable functionality with control over a subset of phases in the rendering process. At the time researchers were able---with significant effort---to trick the GPU into solving scientific problems by encoding solutions within the graphics rendering process (see e.g., \cite{Harris2005,Owens2007}).
+GPUs, far ahead in the many-core arena, only required a bit of flexibility in control and logic to compete against the CPU for general purpose computing.  
+
+The release of NVidia's CUDA architecture and software stack at the end of 2006, deprecated those tricks as developers could suddenly target the GPU with the ease of writing a generic C-like program \cite{CudaGuide2013}. The monumental new CUDA hardware bypassed the graphics rendering pipeline and allowed programs to execute as though the GPU were another just another compute device. The CUDA software stack included NVidia's compiler, \emph{nvcc}, for developers to implement custom GPU codes. Developers who wanted to quickly transition existing code bases to the GPU had access to the CUBLAS API since day one, which offers an implementation of the Basic Linear Algebra Subprograms (BLAS) suite on the GPU. CUFFT, a CUDA implementation of the Fast Fourier Transform (FFT), was also provided with the same justification. In many ways NVidia ensured that GPU computing was easily accessible to the general public. 
 
 
-Figure~\ref{fig:gpu-devotes-more-transistors-to-data-processing} (from \cite{CudaGuide2013}) gives a high level perspective of CPU versus GPU architecture. Due to the inherent task parallelism in computer graphics, GPU designers early on adopted a many-core strategy for hardware. Since computer graphics traditionally involved simple logic, GPUs were designed with the majority of transistors dedicated to computation in vector pipelines with limited functionality. In contrast to this, CPUs have always focused on fast evaluation of serial codes with advanced scalar logic. Thus, given the same number of transistors as a GPU, CPUs allocate a smaller number to computation in order to satisfy the needs for non-computational tasks like branching, caching, etc \cite{Owens2007,CudaGuide2013}. 
-
-Although individual cores on a GPU have lower clock frequency than a CPU, the sheer number of cores on a GPU results in tremendous throughput in terms of floating point operations per second (FLOPs). Figure~\ref{fig:floating-point-operations-per-second} (from \cite{CudaGuide2013}) shows the historical growth in terms of billions of FLOP/s (GFLOP/s) for NVidia GPUs and Intel CPUs. In the last decade the peak GFLOP/s for GPUs has grown as a result of increasing core counts. 
-
-Similarly, to supply data to those cores the GPU has evolved high memory bandwidth, which is an order of magnitude or more larger than the leading CPU \cite{CudaGuide2013}. 
+Individual cores on a GPU operate at a lower clock frequency compared to a CPU, but the sheer number of cores on a GPU results in tremendous throughput in terms of floating point operations per second (FLOPs). Figure~\ref{fig:floating-point-operations-per-second} (from \cite{CudaGuide2013}) shows the historical growth in terms of billions of FLOP/s (GFLOP/s) for NVidia GPUs versus Intel CPUs. In the last decade the peak GFLOP/s for a single GPU has sky-rocketed, leaving CPUs a full order of magnitude behind. Similarly, Figure~\ref{fig:memory-bandwidth} compares the difference in memory bandwidth between the two vendors. In order to supply much needed data to the many cores, NVidia GPUs have evolved a memory hierarchy with bandwidth up to five times higher than Intel CPUs \cite{CudaGuide2013}. 
 
 \begin{figure}
 \centering
@@ -40,9 +48,6 @@ Similarly, to supply data to those cores the GPU has evolved high memory bandwid
 \end{figure}
 
 
-In the last decade, CPU designers have been forced to transition to multi- and many-core chips in order to keep up with demand for continued growth in computational performance. Power constraints make further frequency scaling on CPUs almost impossible, which leaves increased core counts as the only viable solution for designers to continue satisfying Moore's Law \cite{Owens2007}. The GPU, far ahead in the many-core arena, only required a bit of flexibility in control and logic to compete against the CPU. 
-
-
 \begin{figure}
 \centering
 \includegraphics[width=0.9\textwidth]{gpu_content/nvidia_figures/memory-bandwidth.png}
@@ -50,13 +55,6 @@ In the last decade, CPU designers have been forced to transition to multi- and m
 \label{fig:memory-bandwidth}
 \end{figure}
 
-
-Prior to 2006, the GPU had already evolved away from fixed-function pipelines and on to limited programmable functionality with control over a subset of phases in the rendering process. At the time researchers were able---with significant effort---to trick the GPU into solving scientific problems by encoding solutions within the graphics rendering process (see e.g., \cite{Harris2005,Owens2007}). 
-
-The release of NVidia's CUDA architecture and software stack at the end of 2006, deprecated those tricks as developers could suddenly target the GPU with the ease of writing a generic C-like program \cite{CudaGuide2013}. The monumental new CUDA hardware bypassed the graphics rendering pipeline and allowed programs to execute as though the GPU were another just another compute device. The CUDA software stack included NVidia's compiler, \emph{nvcc}, for developers to implement custom GPU codes. Developers who wanted to quickly transition existing code bases to the GPU had access to the CUBLAS API since day one, which offers an implementation of the Basic Linear Algebra Subprograms (BLAS) suite on the GPU. CUFFT, a CUDA implementation of the Fast Fourier Transform (FFT), was also provided with the same justification. In many ways NVidia ensured that GPU computing was easily accessible to the general public. 
-
-
-The performance of modern GPUs \cite{CudaGuide2013} and save the effort?
 
 
 CUDA is not the only solution for GPU computing. 
